grammer/grammer.txt
expression → equality ;
equality → comparison ( ( "!=" | "==" ) comparison )* ;
comparison → term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term → factor ( ( "-" | "+" ) factor )* ;
factor → unary ( ( "/" | "*" ) unary )* ;
unary → ( "!" | "-" ) unary | primary ;
primary → "true" | "false" | "nil" | NUMBER | STRING | "(" expression ")" | IDENTIFIER ;
program → statement* EOF ;
program → declaration* EOF ;
statement → exprStmt | printStmt | block ;
exprStmt → expression ";" ;
printStmt → "print" expression ";" ;
declaration → varDecl | statement ;
varDecl → "var" IDENTIFIER ( "=" expression )? ";" ;
expression → assignment ;
assignment → IDENTIFIER "=" assignment | equality ;
block → "{" declaration* "}" ;
